--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -23,6 +23,7 @@ dotenvy = "0.15"
 fuel-block-syncer = { workspace = true }
 fuel-core = { workspace = true }
 fuel-core-bin = { workspace = true }
+fuel-core-compression = { workspace = true }
 fuel-core-services = { workspace = true }
 fuel-network-watchtower-downloader = { workspace = true }
 futures-util = { workspace = true }
