--- a/crates/block-fetcher/Cargo.toml
+++ b/crates/block-fetcher/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fuel-block-syncer"
+name = "fuel-block-fetcher"
 authors = { workspace = true }
 categories = { workspace = true }
 edition = { workspace = true }
@@ -8,21 +8,19 @@ keywords = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
 version = { workspace = true }
-description = "Syncer of the block from the Fuel network via GraphQL"
+description = "Fetcher of the block from the Fuel network via GraphQL"
 
 [dependencies]
 anyhow = { workspace = true }
-clap = { workspace = true }
-fuel-block-fetcher = { workspace = true }
 fuel-core = { workspace = true }
+fuel-core-client = { workspace = true }
+fuel-core-client-ext = { workspace = true }
 fuel-core-compression = { workspace = true }
-fuel-core-poa = { workspace = true }
-fuel-core-relayer = { workspace = true }
-fuel-core-storage = { workspace = true }
 fuel-core-types = { workspace = true }
 futures = { workspace = true }
 humantime = "2.1.0"
 itertools = { workspace = true }
+postcard = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
