--- a/crates/block-fetcher/Cargo.toml
+++ b/crates/block-fetcher/Cargo.toml
@@ -12,15 +12,11 @@ description = "Fetcher of the block from the Fuel network via GraphQL"
 
 [dependencies]
 anyhow = { workspace = true }
-fuel-core = { workspace = true }
 fuel-core-client = { workspace = true }
 fuel-core-client-ext = { workspace = true }
 fuel-core-compression = { workspace = true }
-fuel-core-types = { workspace = true }
+fuel-core-types = { workspace = true, features = ["test-helpers"] }
 futures = { workspace = true }
-humantime = "2.1.0"
 itertools = { workspace = true }
 postcard = { workspace = true }
-tokio = { workspace = true }
-tracing = { workspace = true }
-url = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
