--- a/crates/block-fetcher/Cargo.toml
+++ b/crates/block-fetcher/Cargo.toml
@@ -21,6 +21,8 @@ futures = { workspace = true }
 humantime = "2.1.0"
 itertools = { workspace = true }
 postcard = { workspace = true }
-tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
+
+[dev-dependencies]
+tokio = { workspace = true }
