chore(ci): setup ci pipeline
* Add CI pipeline

* fix: update ci

* fix: unused deps

* fix: async trait usage

* fix: remove localhost test

---------

Co-authored-by: rymnc <43716372+rymnc@users.noreply.github.com>

--- a/crates/block-fetcher/Cargo.toml
+++ b/crates/block-fetcher/Cargo.toml
@@ -19,4 +19,6 @@ fuel-core-types = { workspace = true, features = ["test-helpers"] }
 futures = { workspace = true }
 itertools = { workspace = true }
 postcard = { workspace = true }
+
+[dev-dependencies]
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
