--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -4,6 +4,10 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
+env:
+  CARGO_TERM_COLOR: always
+  RUST_VERSION: 1.81.0
+
 jobs:
   linux:
     strategy:
@@ -16,14 +20,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
-          toolchain: stable
-          override: true
-          target: ${{ matrix.target }}
+          toolchain: ${{ env.RUST_VERSION }}
+          targets: "${{ matrix.target }}, wasm32-unknown-unknown"
       - uses: Swatinem/rust-cache@v2
       - name: cross build
         run: |
@@ -37,7 +39,7 @@ jobs:
       - name: Upload archive artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.target }}-network-watchtower-archive
+          name: network-watchtower-archive-${{ matrix.target }}
           path: network-watchtower-${{ matrix.target }}.tar.gz
           retention-days: 2
 
@@ -51,14 +53,12 @@ jobs:
           - aarch64-apple-darwin
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
-          toolchain: stable
-          override: true
-          target: ${{ matrix.target }}
+          toolchain: ${{ env.RUST_VERSION }}
+          targets: "${{ matrix.target }}, wasm32-unknown-unknown"
       - uses: Swatinem/rust-cache@v2
       - name: cross build
         run: |
@@ -72,7 +72,7 @@ jobs:
       - name: Upload archive artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.target }}-network-watchtower-archive
+          name: network-watchtower-archive-${{ matrix.target }}
           path: network-watchtower-${{ matrix.target }}.tar.gz
           retention-days: 2
 
@@ -82,7 +82,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: main
       - name: Download artifacts
@@ -111,4 +111,4 @@ jobs:
         with:
           failOnError: false
           name: |
-            *-archive
+            network-watchtower-archive-*
