--- a/crates/downloader/Cargo.toml
+++ b/crates/downloader/Cargo.toml
@@ -27,7 +27,7 @@ futures-util = "0.3"
 hex = "0.4.3"
 itertools = { workspace = true }
 postcard = { workspace = true }
-reqwest = "0.12"
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10.8"
 tokio = { workspace = true, features = ["rt-multi-thread"] }
