--- a/crates/downloader/Cargo.toml
+++ b/crates/downloader/Cargo.toml
@@ -25,7 +25,6 @@ fuel-core-compression = { workspace = true }
 fuel-core-types = { workspace = true }
 futures-util = "0.3"
 hex = "0.4.3"
-itertools = { workspace = true }
 postcard = { workspace = true }
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -33,3 +32,8 @@ sha2 = "0.10.8"
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 tokio-stream = "0.1.16"
 tracing = { workspace = true }
+
+[dev-dependencies]
+proptest = "1.0"
+rand = "0.8"
+tokio = { workspace = true, features = ["test-util"] }
