chore: Enable fault proving feature on `client-ext` and `block-syncer`

--- a/crates/block-syncer/Cargo.toml
+++ b/crates/block-syncer/Cargo.toml
@@ -27,3 +27,8 @@ itertools = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
+
+[features]
+fault-proving = [
+    "fuel-core/fault-proving",
+]
