--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -25,6 +25,7 @@ fuel-core = { workspace = true }
 fuel-core-bin = { workspace = true }
 fuel-core-compression = { workspace = true }
 fuel-core-services = { workspace = true }
+fuel-core-upgradable-executor = { workspace = true }
 fuel-network-watchtower-downloader = { workspace = true }
 futures-util = { workspace = true }
 tikv-jemallocator = { workspace = true }
@@ -34,3 +35,10 @@ url = { workspace = true }
 
 [features]
 default = []
+fault-proving = [
+    "fuel-block-syncer/fault-proving",
+    "fuel-core/fault-proving",
+    "fuel-core-bin/fault-proving",
+    "fuel-core-upgradable-executor/fault-proving",
+    "fuel-core-compression/fault-proving",
+]
