--- a/crates/block-fetcher/Cargo.toml
+++ b/crates/block-fetcher/Cargo.toml
@@ -22,3 +22,10 @@ postcard = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+
+[features]
+fault-proving = [
+    "fuel-core-compression/fault-proving",
+    "fuel-core-client-ext/fault-proving",
+    "fuel-core-types/fault-proving",
+]
