--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -34,3 +34,9 @@ url = { workspace = true }
 
 [features]
 default = []
+fault-proving = [
+    "fuel-block-syncer/fault-proving",
+    "fuel-core/fault-proving",
+    "fuel-core-bin/fault-proving",
+    "fuel-core-compression/fault-proving",
+]
