--- a/crates/block-syncer/Cargo.toml
+++ b/crates/block-syncer/Cargo.toml
@@ -14,7 +14,7 @@ description = "Syncer of the block from the Fuel network via GraphQL"
 anyhow = { workspace = true }
 clap = { workspace = true }
 fuel-block-fetcher = { workspace = true }
-fuel-core = { workspace = true }
+fuel-core = { workspace = true, features = ["relayer"] }
 fuel-core-compression = { workspace = true }
 fuel-core-compression-service = { workspace = true }
 fuel-core-poa = { workspace = true }
@@ -27,3 +27,10 @@ itertools = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
+
+[features]
+fault-proving = [
+    "fuel-core/fault-proving",
+    "fuel-block-fetcher/fault-proving",
+    "fuel-core-types/fault-proving",
+]
