--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,16 +24,16 @@ repository = "https://github.com/FuelLabs/network-watchtower"
 version = "0.0.1"
 
 [workspace.dependencies]
-fuel-core = { git = "https://github.com/fuellabs/fuel-core", branch = "master" }
-fuel-core-bin = { git = "https://github.com/fuellabs/fuel-core", branch = "master", default-features = false, features = ["rocksdb-production", "relayer"] }
-fuel-core-compression = { git = "https://github.com/fuellabs/fuel-core", branch = "master" }
-fuel-core-compression-service = { git = "https://github.com/fuellabs/fuel-core", branch = "master" }
-fuel-core-client = { git = "https://github.com/fuellabs/fuel-core", branch = "master" }
-fuel-core-relayer = { git = "https://github.com/fuellabs/fuel-core", branch = "master" }
-fuel-core-poa = { git = "https://github.com/fuellabs/fuel-core", branch = "master" }
-fuel-core-services = { git = "https://github.com/fuellabs/fuel-core", branch = "master" }
-fuel-core-storage = { git = "https://github.com/fuellabs/fuel-core", branch = "master" }
-fuel-core-types = { git = "https://github.com/fuellabs/fuel-core", branch = "master", features = ["da-compression"] }
+fuel-core = { version = "0.43.2" }
+fuel-core-bin = { version = "0.43.2", default-features = false, features = ["rocksdb-production", "relayer"] }
+fuel-core-compression = { version = "0.43.2" }
+fuel-core-compression-service = { version = "0.43.2" }
+fuel-core-client = { version = "0.43.2" }
+fuel-core-relayer = { version = "0.43.2" }
+fuel-core-poa = { version = "0.43.2" }
+fuel-core-services = { version = "0.43.2" }
+fuel-core-storage = { version = "0.43.2" }
+fuel-core-types = { version = "0.43.2", features = ["da-compression"] }
 
 fuel-block-syncer = { path = "crates/block-syncer" }
 fuel-block-fetcher = { path = "crates/block-fetcher" }
